# newlib

./: .gitignore  CMakeLists.txt  README.md  library.json
build-arm-none-eabi/: README.md  _newlib_version.h  newlib.h
build-arm-none-eabi/meson-logs/: meson-log.txt
build-arm-none-eabi/meson-private/: cmd_line.txt
include/: newlib-force.h
newlib/libc/tinystdio/: ftoa_engine.h  strtof.c
scripts/: README.md  build.sh  do-arm-configure.sh  dummy.c
